--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Your Name</title>
+    <title>Chirag Khatri</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -31,7 +31,7 @@
         <ul class="sidebar-nav">
             <a id="menu-close" href="#" class="btn btn-light btn-lg pull-right toggle"><i class="fa fa-times"></i></a>
             <li class="sidebar-brand">
-                <a href="#top">Your Name</a>
+                <a href="#top">Chirag Khatri</a>
             </li>
             <li>
                 <a href="#top">Home</a>
@@ -54,8 +54,8 @@
     <!-- Header -->
     <header id="top" class="header">
         <div class="text-vertical-center">
-            <h1>Your Name</h1>
-            <h3>Catchy snippit about yourself.</h3>
+            <h1>Chirag Khatri</h1>
+            <h3>Aurum Est Potestas.</h3>
             <br>
             <a href="#about" class="btn btn-dark btn-lg">Find Out More</a>
         </div>
@@ -66,8 +66,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Maybe a little information about yourself?</h2>
-                    <p class="lead">Even more information about yourself.</p>
+                    <h2> Freshman at the University of Texas at Austin!</h2>
+                    <p class="lead">Computer Science Major! Pokemon Master!</p>
                 </div>
             </div>
             <!-- /.row -->
