--- a/index.html
+++ b/index.html
@@ -199,8 +199,9 @@
                     <h4><strong>Contact</strong>
                     </h4>
                     <ul class="list-unstyled">
-                        <li><i class="fa fa-phone fa-fw"></i> (123) 456-7890</li>
-                        <li><i class="fa fa-envelope-o fa-fw"></i>  <a href="mailto:name@example.com">name@example.com</a>
+                        <li><i class="fa fa-phone fa-fw"></i> (214) 663-3768</li>
+                        <li><i class="fa fa-envelope-o fa-fw"></i>
+                            <a href="mailto:chirag.k.khatri@gmail.com">chirag.k.khatri@gmail.com.com</a>
                         </li>
                     </ul>
                     <br>
@@ -212,7 +213,7 @@
                             <a href="LINK TO TWITTER"><i class="fa fa-twitter fa-fw fa-3x"></i></a>
                         </li>
                         <li>
-                            <a href="LINK TO GITHUB"><i class="fa fa-github-alt fa-fw fa-3x"></i></a>
+                            <a href="https://github.com/Ckhatritt"><i class="fa fa-github-alt fa-fw fa-3x"></i></a>
                         </li>
                         <li>
                             <a href="LINK TO LINKEDIN"><i class="fa fa-linkedin fa-fw fa-3x"></i></a>
