--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <ul class="sidebar-nav">
             <a id="menu-close" href="#" class="btn btn-light btn-lg pull-right toggle"><i class="fa fa-times"></i></a>
             <li class="sidebar-brand">
-                <a href="#top">Chirag Khatri</a>
+                <a href="#top">Ryan Hsu </a>
             </li>
             <li>
                 <a href="#top">Home</a>
