--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2> Freshman at the University of Texas at Austin!</h2>
-                    <p class="lead">Computer Science Major! Pokemon Master!</p>
+                    <p class="lead">Computer Science Major!</p>
                 </div>
             </div>
             <!-- /.row -->
@@ -91,9 +91,9 @@
                                 <i class="fa fa-cloud fa-stack-1x text-primary"></i>
                             </span>
                                 <h4>
-                                    <strong>Skill Name</strong>
+                                    <strong>Java</strong>
                                 </h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                                <p></p>
                             </div>
                         </div>
                         <div class="col-md-3 col-sm-6">
@@ -103,9 +103,9 @@
                                 <i class="fa fa-compass fa-stack-1x text-primary"></i>
                             </span>
                                 <h4>
-                                    <strong>Skill Name</strong>
+                                    <strong>HTML5/CSS3</strong>
                                 </h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                                <p></p>
                             </div>
                         </div>
                         <div class="col-md-3 col-sm-6">
@@ -115,9 +115,9 @@
                                 <i class="fa fa-flask fa-stack-1x text-primary"></i>
                             </span>
                                 <h4>
-                                    <strong>Skill Name</strong>
+                                    <strong>PYTHON<strong>
                                 </h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                                <p></p>
                             </div>
                         </div>
                         <div class="col-md-3 col-sm-6">
@@ -127,9 +127,9 @@
                                 <i class="fa fa-shield fa-stack-1x text-primary"></i>
                             </span>
                                 <h4>
-                                    <strong>Skill Name</strong>
+                                    <strong>RUBY</strong>
                                 </h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                                <p></p>
                             </div>
                         </div>
                     </div>
@@ -143,11 +143,12 @@
     </section>
 
     <!-- Portfolio -->
+    <!--ay>
     <section id="portfolio" class="portfolio">
         <div class="container">
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1 text-center">
-                    <h2>My Work</h2>
+                    <h2>Math Club Database</h2>
                     <hr class="small">
                     <div class="row">
                         <div class="col-md-6">
@@ -190,37 +191,29 @@
         </div>
         <!-- /.container -->
     </section>
-
+    <!ay-->
     <!-- Footer -->
     <footer>
         <div class="container">
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1 text-center">
-                    <h4><strong>Contact</strong>
-                    </h4>
+                    <h2><strong><a href="resume.pdf" download="resume.pdf">Resume</a></strong></h2>
+                    <h2><strong>Contact</strong>
+                    </h2>
                     <ul class="list-unstyled">
                         <li><i class="fa fa-phone fa-fw"></i> (214) 663-3768</li>
                         <li><i class="fa fa-envelope-o fa-fw"></i>
-                            <a href="mailto:chirag.k.khatri@gmail.com">chirag.k.khatri@gmail.com.com</a>
+                            <a href="mailto:chirag.k.khatri@gmail.com">chirag.k.khatri@gmail.com</a>
                         </li>
                     </ul>
                     <br>
                     <ul class="list-inline">
                         <li>
-                            <a href="LINK TO FACEBOOK"><i class="fa fa-facebook fa-fw fa-3x"></i></a>
-                        </li>
-                        <li>
-                            <a href="LINK TO TWITTER"><i class="fa fa-twitter fa-fw fa-3x"></i></a>
-                        </li>
-                        <li>
-                            <a href="https://github.com/Ckhatritt"><i class="fa fa-github-alt fa-fw fa-3x"></i></a>
-                        </li>
-                        <li>
-                            <a href="LINK TO LINKEDIN"><i class="fa fa-linkedin fa-fw fa-3x"></i></a>
+                            <a href="https://github.com/Ckhatri"><i class="fa fa-github-alt fa-fw fa-3x"></i></a>
                         </li>
                     </ul>
                     <hr class="small">
-                    <p class="text-muted">Copyright &copy; Your Name 2014</p>
+                    <p class="text-muted">Copyright &copy; Chirag Khatri 2015</p>
                 </div>
             </div>
         </div>
