--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1 text-center">
-                    <h2><strong><a href="CHIRAG_KHATRI_RESUME.pdf" download="CHIRAG_KHATRI_RESUME.pdf">Resume</a></strong></h2>
+                    <h2><strong><a href="resume.pdf" download="resume.pdf">Resume</a></strong></h2>
                     <h2><strong>Contact</strong>
                     </h2>
                     <ul class="list-unstyled">
