--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                     <h2><strong>Contact</strong>
                     </h2>
                     <ul class="list-unstyled">
-                        <li><i class="fa fa-phone fa-fw"></i></li>
+                        <li><i class="fa fa-phone fa-fw"></i> (214) 663-3768</li>
                         <li><i class="fa fa-envelope-o fa-fw"></i>
                             <a href="mailto:chirag.k.khatri@gmail.com">chirag.k.khatri@gmail.com</a>
                         </li>
