--- a/index.html
+++ b/index.html
@@ -201,8 +201,8 @@
                     <h2><strong>Contact</strong>
                     </h2>
                     <ul class="list-unstyled">
-                        <li><i class="fa fa-phone fa-fw"></i> (214) 663-3768</li>
-                        <li><i class="fa fa-envelope-o fa-fw"></i>
+                        <li><i class="fa fa-phone fa-3x"></i> (214) 663-3768  </li>
+                        <li><i class="fa fa-envelope-o fa-3x"></i>
                             <a href="mailto:chirag.k.khatri@gmail.com">chirag.k.khatri@gmail.com</a>
                         </li>
                     </ul>
