--- a/index.html
+++ b/index.html
@@ -201,15 +201,15 @@
                     <h2><strong>Contact</strong>
                     </h2>
                     <ul class="list-unstyled">
-                        <li><i class="fa fa-phone fa-1x"></i> (214) 663-3768  </li>
-                        <li><i class="fa fa-envelope-o fa-1x"></i>
-                            <a href="mailto:chirag.k.khatri@gmail.com">chirag.k.khatri@gmail.com</a>
+                        <li><i class="fa fa-phone fa-2x"></i><h3> (214) 663-3768  </h3></li>
+                        <li><i class="fa fa-envelope-o fa-2x"></i>
+                            <a href="mailto:chirag.k.khatri@gmail.com"> <h3> chirag.k.khatri@gmail.com </h3> </a>
                         </li>
                     </ul>
                     <br>
                     <ul class="list-inline">
                         <li>
-                            <a href="https://github.com/Ckhatri"><i class="fa fa-github-alt fa-fw fa-3x"></i></a>
+                            <a href="https://github.com/Ckhatri"><i class="fa fa-github-alt fa-fw fa-4x"></i></a>
                         </li>
                     </ul>
                     <hr class="small">
