--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
         <ul class="sidebar-nav">
             <a id="menu-close" href="#" class="btn btn-light btn-lg pull-right toggle"><i class="fa fa-times"></i></a>
             <li class="sidebar-brand">
-                <a href="#top">Chirag Khatri</a>
+                <a href="#top">Chirag Khatri
+                </a>
             </li>
             <li>
                 <a href="#top">Home</a>
@@ -54,7 +55,7 @@
     <!-- Header -->
     <header id="top" class="header">
         <div class="text-vertical-center">
-            <h1>Chirag Khatri</h1>
+            <h1>New Website Coming!</h1>
             <h3></h3>
             <br>
             <a href="#about" class="btn btn-dark btn-lg">Find Out More</a>
