--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <!-- Header -->
     <header id="top" class="header">
         <div class="text-vertical-center">
-            <h1>New Website Coming!</h1>
+            <h1>Chirag Khatri</h1>
             <h3></h3>
             <br>
             <a href="#about" class="btn btn-dark btn-lg">Find Out More</a>
