--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			<section id="header">
 				<div class="inner">
 					<h1><strong>Chirag Khatri</strong></h1>
-					<p>Comptuer Science Major at the University of Texas at Austin!<br /></p>
+					<p>Computer Science Major at the University of Texas at Austin!<br /></p>
 					<ul class="actions">
 						<li><a href="#one" class="button scrolly">Discover</a></li>
 					</ul>
