--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 								<h2>Hi, I'm Chirag Khatri<br /></h2>
 							</header>
 							<p>I'm a second-year computer science student at the University of Texas at Austin. I enjoy solving problems which is usually done through code. <br/>
-							There will soon be a place to view all my projects, as of right now however, please feel free to look at my github. <br />
+							There will soon be a place to view all my projects, as of right now however, please feel free to look at my <a href="https://github.com/Ckhatri/">github</a>. <br />
 							</p>
 							<h2><a href="CHIRAG_KHATRI_RESUME.pdf" class="resume" target="_blank">My resume</a></h2>
 						</div>
@@ -47,14 +47,14 @@
 				</div>
 			</section>
 
-		<!-- 	
+			
 			<section id="two" class="main style2">
 				<div class="container">
 					<div class="row 150%">
 						<div class="6u 12u$(medium)">
 							<ul class="major-icons">
-								<li><span class="icon style1 major fa-code"></span></li>
-								<li><span class="icon style2 major fa-bolt"></span></li>
+								<li><span class="icon style1 major fa-html5"></span></li>
+								<li><span class="icon style2 major fa-css3"></span></li>
 								<li><span class="icon style3 major fa-camera-retro"></span></li>
 								<li><span class="icon style4 major fa-cog"></span></li>
 								<li><span class="icon style5 major fa-desktop"></span></li>
@@ -63,8 +63,7 @@
 						</div>
 						<div class="6u$ 12u$(medium)">
 							<header class="major">
-								<h2>Lorem ipsum dolor adipiscing<br />
-								amet dolor consequat</h2>
+								<h2>What can I do for you?<br /></h2>
 							</header>
 							<p>Adipiscing a commodo ante nunc accumsan interdum mi ante adipiscing. A nunc lobortis non nisl amet vis volutpat aclacus nascetur ac non. Lorem curae eu ante amet sapien in tempus ac. Adipiscing id accumsan adipiscing ipsum.</p>
 							<p>Blandit faucibus proin. Ac aliquam integer adipiscing enim non praesent vis commodo nunc phasellus cubilia ac risus accumsan. Accumsan blandit. Lobortis phasellus non lobortis dit varius mi varius accumsan lobortis. Blandit ante aliquam lacinia lorem lobortis semper morbi col faucibus vitae integer placerat accumsan orci eu mi odio tempus adipiscing adipiscing adipiscing curae consequat feugiat etiam dolore.</p>
@@ -72,7 +71,7 @@
 						</div>
 					</div>
 				</div>
-			</section> -->
+			</section>
 
 <!-- 				<section id="three" class="main style2">
 				<div class="container">
