Added proper icons

--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
 							<ul class="major-icons">
 								<li><span class="icon style1 major fa-html5"></span></li>
 								<li><span class="icon style2 major fa-css3"></span></li>
-								<li><span class="icon style3 major fa-camera-retro"></span></li>
-								<li><span class="icon style4 major fa-cog"></span></li>
-								<li><span class="icon style5 major fa-desktop"></span></li>
-								<li><span class="icon style6 major fa-calendar"></span></li>
+								<li><span class="icon custom"><i class="icon-python fa-4x" style="color:#6bd4c8;"></i></span></li>
+								<li><span class="icon"><i class="icon-java fa-4x" style="color:#57aed3;"></i></span></li>
+								<li><span class="icon"><i class="icon-javascript fa-4x" style="color:#4a87d3;"></i></span></li>
+								<li><span class="icon"><i class="icon-php-alt fa-4x" style="color:#6b88e6;"></i></span></li>
 							</ul>
 						</div>
 						<div class="6u$ 12u$(medium)">
