--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 			</section>
 
 			
-			<section id="two" class="main style2">
+<!-- 			<section id="two" class="main style2">
 				<div class="container">
 					<div class="row 150%">
 						<div class="6u 12u$(medium)">
@@ -73,7 +73,7 @@
 				</div>
 			</section>
 
-<!-- 				<section id="three" class="main style2">
+				<section id="three" class="main style3">
 				<div class="container">
 					<header class="major">
 						<h2>Adipiscing amet consequat</h2>
