Made icons bigger

--- a/index.html
+++ b/index.html
@@ -445,9 +445,9 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 		<!-- Footer -->
 			<section id="footer">
 				<ul class="icons">
-					<li><a href="https://twitter.com/chiragkkhatri" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
-					<li><a href="https://github.com/Ckhatri" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
-					<li><a href="mailto:chirag.k.khatri@gmail.com" class="icon alt fa-envelope"><span class="label">Resume</span></a></li>
+					<li><a href="https://twitter.com/chiragkkhatri" class="icon alt fa-twitter fa-2x"><span class="label">Twitter</span></a></li>
+					<li><a href="https://github.com/Ckhatri" class="icon alt fa-github fa-2x"><span class="label">GitHub</span></a></li>
+					<li><a href="mailto:chirag.k.khatri@gmail.com" class="icon alt fa-envelope fa-2x"><span class="label">Resume</span></a></li>
 				</ul>
 				<ul class="copyright">
 					<li>&copy; Chirag Khatri</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
