updated picture and resume

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 							<header class="major">
 								<h2>Hi, I'm Chirag Khatri<br /></h2>
 							</header>
-							<p>I'm a second-year computer science student at the University of Texas at Austin.
+							<p>I'm a third-year computer science student at the University of Texas at Austin.
 							There will soon be a place to view all my projects, as of right now however, please feel free to look at my <a href="https://github.com/Ckhatri/">github</a>. <br />
 							</p>
 							<h2><a href="CHIRAG_KHATRI_RESUME.pdf" class="resume" target="_blank">My resume</a></h2>
