--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			<section id="header">
 				<div class="inner">
 					<h1><strong>Chirag Khatri</strong></h1>
-					<p>Computer Science Major at the University of Texas at Austin!<br /></p>
+					<p>Software Developer at Microsoft!<br /></p>
 					<ul class="actions">
 						<li><a href="#one" class="button scrolly">Discover</a></li>
 					</ul>
@@ -35,8 +35,8 @@
 							<header class="major">
 								<h2>Hi, I'm Chirag Khatri<br /></h2>
 							</header>
-							<p>I'm a third-year computer science student at the University of Texas at Austin.
-							There will soon be a place to view all my projects, as of right now however, please feel free to look at my <a href="https://github.com/Ckhatri/">github</a>. <br />
+							<p>I'm a software engineer at Microsoft. I graduated from the University of Texas at Austin with a BS in CS.
+							There will soon be a place to view all my projects, as of right now however, please feel free to look at my <a href="https://github.com/ckhatri/">github</a>. <br />
 							</p>
 							<h2><a href="CHIRAG_KHATRI_RESUME.pdf" class="resume" target="_blank">My resume</a></h2>
 						</div>
@@ -47,7 +47,7 @@
 				</div>
 			</section>
 
-			
+
 <!-- 			<section id="two" class="main style2">
 				<div class="container">
 					<div class="row 150%">
@@ -108,7 +108,7 @@
 				</div>
 			</section> -->
 
-<!-- 	
+<!--
 			<section id="four" class="main style2 special">
 				<div class="container">
 					<header class="major">
